Fixed button text alignment issue on mobile
On iOS devices, the dice's text weren't centered because the margin and padding weren't set to 0

--- a/index.css
+++ b/index.css
@@ -70,6 +70,8 @@ button {
 }
 
 .die {
+    padding: 0;
+    margin: 0;
     border: none;
     border-radius: 5px;
     font-size: 1.5em;
